# ft-agent

./: .env.example  .gitignore  README.en.md  README.md  README.zh-CN.md  pyproject.toml
docs/: agent-core.md
examples/: basic_flow.py  chatbot.py  ft_planner.py  ft_router.py  ft_supervisor.py  ft_writer.py  run_pipeline.py  tool_chatbot.py  weather_tool_flow.py
src/agent_core/: __init__.py  agent.py
src/agent_core/core/: __init__.py  node.py
src/agent_core/tools/: __init__.py  executor.py  files.py  nodes.py
src/ft_agent/: __init__.py  agent.py  check_deepseek.py  config.py  deepseek_client.py  pipeline.py
src/ft_agent/core/: __init__.py  context.py  flow.py  node.py  trace.py
src/ft_agent/llm/: __init__.py  deepseek.py  nodes.py
src/ft_agent/pipeline/: __init__.py  final.py  planner.py  router.py  supervisor.py  writer.py
src/ft_agent/tools/: __init__.py  base.py  executor.py  files.py  nodes.py
src/ft_agent/tools/builtins/: __init__.py  weather.py
src/ft_agent/util/: __init__.py  check_deepseek.py
src/ft_agent/web/: __init__.py  app.py
src/ft_agent/web/static/: app.js  index.html  styles.css
tests/: test_agent_core_package.py  test_core.py  test_file_tools.py  test_final_answer.py  test_llm.py  test_pipeline.py  test_planner.py  test_router.py  test_supervisor.py  test_tools.py  test_web.py  test_writer.py
