[project]
name = "ft-agent"
version = "0.1.0"
description = "Fischer-Tropsch catalyst research agent built on agent-core-runtime."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agent-core-runtime @ https://github.com/Lancetwang/agent-core-runtime/archive/356905884311a1811c4ab698365d3ed6a79219eb.zip",
    "chromadb>=1.5.9",
    "fastapi>=0.137.1",
    "uvicorn>=0.49.0",
]

[project.scripts]
ft-agent-web = "ft_agent.web.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ft_agent"]
